--- a/front/login.html
+++ b/front/login.html
@@ -9,14 +9,8 @@
 
   <body>
     <main class="login-main">
+      <div class="loginBG-img"></div>
       <div class="side-container">
-        <div class="adm-switch-row row">
-          <img src="assets/user.png" />
-          <div class="adm-switch">
-            <div class="adm-switch-ball"></div>
-          </div>
-          <img src="assets/crown.png" />
-        </div>
         <div class="side-content">
           <h1>Insira suas informações de Login</h1>
           <form id="login-form" class="classic-form">
@@ -26,11 +20,7 @@
             </div>
             <div class="column">
               <label for="password">Senha</label>
-              <input
-                type="password"
-                name="password"
-                placeholder="Insira sua senha"
-              />
+              <input type="password" name="password" placeholder="Insira sua senha" class="passInput" />
             </div>
             <button type="submit">Login</button>
           </form>
